hover-portfolio/padding16-30px/var/link-to-svg/

--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
             </nav>
             <ul class="contact-links">
                 <li class="icon-mail">
-                    <svg class="icon-envelope" width="16px" height="12px">
-                        <use href="./images/icons.svg#icon-envelope_icon"></use>
-                    </svg>
-                    <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="mail">
+                        <svg class="icon-envelope" width="16px" height="12px">
+                            <use href="./images/icons.svg#icon-envelope_icon"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
                 <li class="icon-phone">
-                    <svg class="icon-smartphone" width="16px" height="12px">
+                    <a href="tel:+380961111111" class="phone"><svg class="icon-smartphone" width="16px" height="12px">
                         <use href="./images/icons.svg#icon-smartphone_icon"></use>
-                    </svg>
-                    <a href="tel:+380961111111" class="phone">+38 096 111 11 11</a>
+                    </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -282,7 +281,7 @@
 </main>
     <footer class="footer">
         <div class="container bottom">
-            <div>
+            <div class="footer-addresss">
                 <a href="" class="footer-logo">Web<span class="colorsplit-footer">Studio</span></a>
                 <address class="address">
                     <ul class="address-list">
@@ -299,7 +298,7 @@
                 </address>
             </div>
             <div class="social-container">
-                <h3 class="connect-title">приєднуйтесь</h3>
+                <p class="connect-title">приєднуйтесь</p>
                 <ul class="soc-links-list">
                     <li class="soc-link-item">
                         <a href="" class="soc-icon-link">
