--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,14 @@
             </nav>
             <ul class="contact-links">
                 <li class="icon-mail">
-                    <svg class="icon-envelope" width="16px" height="12px">
+                    <a href="mailto:info@devstudio.com" class="mail"><svg class="icon-envelope" width="16px" height="12px">
                         <use href="./images/icons.svg#icon-envelope_icon"></use>
-                    </svg>
-                    <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+                    </svg> info@devstudio.com</a>
                 </li>
                 <li class="icon-phone">
-                    <svg class="icon-smartphone" width="16px" height="12px">
+                    <a href="tel:+380961111111" class="phone"><svg class="icon-smartphone" width="16px" height="12px">
                         <use href="./images/icons.svg#icon-smartphone_icon"></use>
-                    </svg>
-                    <a href="tel:+380961111111" class="phone">+38 096 111 11 11</a>
+                    </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -70,42 +68,42 @@
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/prime.jpg" alt="сучасні бездротові навушники" width="370">
+                    <img src="./images/prime.jpg" alt="сучасні бездротові навушники" width="370" class="list-image">
                     <div class="image-text">
                         <h2 class="picture-title">Проєкт Prime</h2>
                         <p class="picture-description">Маркетинг</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/boxes.jpg" alt="біла та коричнева коробки з написами на них" width="370">
+                    <img src="./images/boxes.jpg" alt="біла та коричнева коробки з написами на них" width="370" class="list-image">
                     <div class="image-text">
                         <h2 class="picture-title">Проєкт Boxes</h2>
                         <p class="picture-description">Додаток</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/inspiration.jpg" alt="монітор із зображеним на ньому веб-сайтом" width="370">
+                    <img src="./images/inspiration.jpg" alt="монітор із зображеним на ньому веб-сайтом" width="370" class="list-image">
                     <div class="image-text">
                         <h2 class="picture-title">Inspiration has no Borders</h2>
                         <p class="picture-description">Веб-сайт</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/limited.jpg" alt="відкрита книга із зображеннями та намисом limited edition" width="370">
+                    <img src="./images/limited.jpg" alt="відкрита книга із зображеннями та намисом limited edition" width="370" class="list-image">
                     <div class="image-text">
                         <h2 class="picture-title">Видання Limited Edition</h2>
                         <p class="picture-description">Дизайн</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/lab.jpg" alt="бірка з написом label tag" width="370">
+                    <img src="./images/lab.jpg" alt="бірка з написом label tag" width="370" class="list-image">
                     <div class="image-text">
                         <h2 class="picture-title">Проєкт LAB</h2>
                         <p class="picture-description">Маркетинг</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/growing.jpg" alt="ноутбук із зображенням чоловіка в костюмі з планшетом в руках" width="370">
+                    <img src="./images/growing.jpg" alt="ноутбук із зображенням чоловіка в костюмі з планшетом в руках" width="370" class="list-image">
                     <div class="image-text">
                         <h2 class="picture-title">Growing Business</h2>
                         <p class="picture-description">Додаток</p>
@@ -117,7 +115,7 @@
 </main>
     <footer class="footer">
         <div class="container bottom">
-            <div>
+            <div class="footer-address">
                 <a href="" class="footer-logo">Web<span class="colorsplit-footer">Studio</span></a>
                 <address class="address">
                     <ul class="address-list">
@@ -134,7 +132,7 @@
                 </address>
             </div>
             <div class="social-container">
-                <h3 class="connect-title">приєднуйтесь</h3>
+                <p class="connect-title">приєднуйтесь</p>
                 <ul class="soc-links-list">
                     <li class="soc-link-item">
                         <a href="" class="soc-icon-link">
