--- a/portfolio.html
+++ b/portfolio.html
@@ -47,63 +47,120 @@
             </ul>
             <ul class="icons-list">
                 <li class="list-content">
-                    <img src="./images/tehno.jpg" alt="ноутбук із зображеними портретами людей" width="370" class="list-image">
+                    <div class="picture-text-hover">
+                        <img src="./images/tehno.jpg" alt="ноутбук із зображеними портретами людей" width="370" class="list-image">
+                    <p class="text-hover">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                        вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                    </div>
                     <div class="image-text">
                         <h2 class="picture-title">Технокряк</h2>
                         <p class="picture-description">Веб-сайт</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/poster.jpg" alt="два баскетбольні гравці змагаються за м'яч" width="370" class="list-image">
+                    <div class="picture-text-hover">
+                        <img src="./images/poster.jpg" alt="два баскетбольні гравці змагаються за м'яч" width="370" class="list-image">
+                        <p class="text-hover">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <div class="image-text">
                         <h2 class="picture-title">Постер New Orlean vs Golden Star</h2>
                         <p class="picture-description">Дизайн</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/restaurant.jpg" alt="логотип ресторану з рибою на задньому фоні" width="370" class="list-image">
+                    <div class="picture-text-hover">
+                        <img src="./images/restaurant.jpg" alt="логотип ресторану з рибою на задньому фоні" width="370" class="list-image">
+                        <p class="text-hover">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
                     <div class="image-text">
                         <h2 class="picture-title">Ресторан Seafood</h2>
                         <p class="picture-description">Додаток</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/prime.jpg" alt="сучасні бездротові навушники" width="370" class="list-image">
+                    <div class="picture-text-hover">
+                        <img src="./images/prime.jpg" alt="сучасні бездротові навушники" width="370" class="list-image">
+                        <p class="text-hover">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
                     <div class="image-text">
                         <h2 class="picture-title">Проєкт Prime</h2>
                         <p class="picture-description">Маркетинг</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/boxes.jpg" alt="біла та коричнева коробки з написами на них" width="370" class="list-image">
+                    <div class="picture-text-hover">
+                        <img src="./images/boxes.jpg" alt="біла та коричнева коробки з написами на них" width="370" class="list-image">
+                        <p class="text-hover">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
                     <div class="image-text">
                         <h2 class="picture-title">Проєкт Boxes</h2>
                         <p class="picture-description">Додаток</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/inspiration.jpg" alt="монітор із зображеним на ньому веб-сайтом" width="370" class="list-image">
+                    <div class="picture-text-hover">
+                        <img src="./images/inspiration.jpg" alt="монітор із зображеним на ньому веб-сайтом" width="370" class="list-image">
+                        <p class="text-hover">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
                     <div class="image-text">
                         <h2 class="picture-title">Inspiration has no Borders</h2>
                         <p class="picture-description">Веб-сайт</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/limited.jpg" alt="відкрита книга із зображеннями та намисом limited edition" width="370" class="list-image">
+                    <div class="picture-text-hover">
+                        <img src="./images/limited.jpg" alt="відкрита книга із зображеннями та намисом limited edition" width="370"
+                            class="list-image">
+                        <p class="text-hover">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
                     <div class="image-text">
                         <h2 class="picture-title">Видання Limited Edition</h2>
                         <p class="picture-description">Дизайн</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/lab.jpg" alt="бірка з написом label tag" width="370" class="list-image">
+                    <div class="picture-text-hover">
+                        <img src="./images/lab.jpg" alt="бірка з написом label tag" width="370" class="list-image">
+                        <p class="text-hover">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
                     <div class="image-text">
                         <h2 class="picture-title">Проєкт LAB</h2>
                         <p class="picture-description">Маркетинг</p>
                     </div>
                 </li>
                 <li class="list-content">
-                    <img src="./images/growing.jpg" alt="ноутбук із зображенням чоловіка в костюмі з планшетом в руках" width="370" class="list-image">
+                    <div class="picture-text-hover">
+                        <img src="./images/growing.jpg" alt="ноутбук із зображенням чоловіка в костюмі з планшетом в руках" width="370"
+                            class="list-image">
+                        <p class="text-hover">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
                     <div class="image-text">
                         <h2 class="picture-title">Growing Business</h2>
                         <p class="picture-description">Додаток</p>
