buttons transition, border transition, x-button renamed correctly,  transitions correctly replaced
sorry for "p" changes name, i had some awkward mistakes with repositories, and i used to name it as quick ass possible, to find out had my rep was pushed correctly

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="close-button" data-modal-close>
-                <svg class="x-button" width="11px" height="11px">
+                <svg class="modal-close-button" width="11px" height="11px">
                     <use href="./images/icons.svg#icon-x-logo"></use>
                 </svg>
             </button>
@@ -359,6 +359,9 @@
 <script src="./js/modal.js"></script>
 </body>
 </html>
+
+
+
 
 
 
